--- a/styles/annotation.css
+++ b/styles/annotation.css
@@ -1,32 +1,26 @@
-html, body, .container-table {
+html, body {
     height: 100%;
     width: 100%;
     max-width: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
     background-color: #17243A;
 }
 
-.container-table {
-    display: table;
-}
-
-.vertical-center-row {
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.polaroid {
-    width: 30em;
-    height: 32.5em;
-    margin-left: auto;
-    margin-right: auto;
+#polaroid {
     border: black 1px solid;
+    border-radius:.2em;
+    height: 100%;
     background-color: whitesmoke;
 }
 
+.col-md-3 {
+    height: 100%;
+}
+
 .polaroid-image {
-    width: 80%;
-    height: 68%;
+    width: 90%;
+    height: 75%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2em;
@@ -36,6 +30,8 @@ html, body, .container-table {
     width: 100%;
     height: 100%;
 }
+
+
 
 .polaroid-text {
     text-align: center;
