Name and date select for export added

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -33,7 +33,7 @@ input[type=text]:focus {
     /*border-bottom: 0px;*/
 }
 
-label {
+label.shift {
     color: white;
     font-size: 18px;
     font-weight: normal;
