--- a/styles/theme.css
+++ b/styles/theme.css
@@ -88,11 +88,11 @@ input[type=submit] {
     border-radius: 1.5em;
     line-height: 2.7em;
     color: white;
-    width: 6em;
-    height: 3em;
     transition: all .25s ease-in-out;
     -moz-transition: all .25s ease-in-out;
     -webkit-transition: all .25s ease-in-out;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 input[type=submit]:hover {
