fixed pointers hovering over buttons on annotation card

--- a/styles/annotation.css
+++ b/styles/annotation.css
@@ -50,6 +50,10 @@ html, body {
 #good-button {
     color: green;
 }
+#bad-button:hover, #good-button:hover {
+    cursor: pointer;
+}
+
 
 #image {
     width: 100%;
