fit columns better in nav bar and use same styling for other elements

--- a/styles/admin.css
+++ b/styles/admin.css
@@ -4,8 +4,13 @@
     height: 5em;
 }
 
+#name {
+    text-align: right;
+    padding-right: 2em;
+}
+
 #logo {
-    padding-left: 1em;
+    padding-left: 2em;
 }
 
 #image-dir {
