add new styling to home page

--- a/styles/home.css
+++ b/styles/home.css
@@ -5,7 +5,14 @@
 }
 
 #logo {
-    padding-left: 1em;
+    padding-left: 2em;
+    color: white;
+}
+
+#name {
+    color: white;
+    text-align:right;
+    padding-right: 2em;
 }
 
 #image-dir {
