--- a/styles/annotation.css
+++ b/styles/annotation.css
@@ -32,6 +32,7 @@ html, body {
 .polaroid-image {
     width: 85%;
     height: 85%;
+    display: block;
     margin-right: auto;
     margin-left: auto;
     margin-top: 2em;
@@ -58,6 +59,7 @@ html, body {
 #image {
     width: 100%;
     height: 100%;
+
 }
 
 
