--- a/styles/annotation.css
+++ b/styles/annotation.css
@@ -6,23 +6,30 @@ html, body {
     overflow-y: hidden;
 }
 
-#navbar {
-    height: 5%;
-    color: white;
-    text-align:right;
-}
-
-#swiper {
-    height: 92.5%;
-}
-
-#polaroid {
-    border: 1px whitesmoke solid;
-    padding-top: .25em;
+.card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100%;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px whitesmoke solid;
     background-color: whitesmoke;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    width: 100%;
+    padding: 3em;
+}
+
+#image {
+    width: 100%;
+    height: auto;
 }
 
 .col-md-3 {
@@ -31,18 +38,14 @@ html, body {
 
 .polaroid-image {
     width: 85%;
-    height: 85%;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 2em;
+    height: 50%;
+    margin-bottom: 2em;
 }
 
 .polaroid-text {
     text-align: center;
-    height: 7.5%;
-    font-size: 2rem;
-    padding-top: .5em;
+    font-size: 5rem;
+    width: 100%;
 }
 
 #bad-button {
@@ -53,13 +56,6 @@ html, body {
 }
 #bad-button:hover, #good-button:hover {
     cursor: pointer;
-}
-
-
-#image {
-    width: 100%;
-    height: 100%;
-
 }
 
 
