major refactor of home page and removed start_page

--- a/styles/start_page.css
+++ b/styles/start_page.css
@@ -33,7 +33,7 @@ html, body, .container-table {
 }
 
 .input-container {
-    padding: 1em 0em 1em 0em;
+    padding: 1em 0 1em 0;
     position: relative;
     margin-bottom: 45px;
 }
