--- a/styles/home.css
+++ b/styles/home.css
@@ -1,54 +1,66 @@
-.nav {
+html, body{
+    height: 100%;
+    width: 100%;
     background-color: #17243A;
-    color: white;
-    height: 5em;
 }
 
-#logo {
-    padding-left: 2em;
-    color: white;
+h2 {
+    margin: 0 0 1em 0;
 }
 
-#name {
-    color: white;
-    text-align:right;
-    padding-right: 2em;
+.container {
+    padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#image-dir {
-    border: 1px solid black;
+.content {
+    height: 60%;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
 
-#task-list {
-    border: 1px solid black;
-    height: 10em;
+.sidebar {
+    height: 60%;
 }
 
-#new-batch, #continue-batch {
-    margin: auto;
-    width: 60%;
-    font-size: 2rem;
-    text-align: center;
-    font-family: "Open Sans", sans-serif;
-    border-radius: 1em;
-    line-height: 3rem;
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+.line {
+    border-right: 2px solid #B7760E;
+    height: 100%;
+    width: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
-#new-batch {
-    color: #5483D3;
-    border: 2px #5483D3 solid;
+.vcenter {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.input-container {
+    padding: 1em 0 1em 0;
+    position: relative;
+}
+
+.submit-form {
+    margin-bottom: 1em;
 }
 
 #continue-batch {
+    margin: auto;
+    width: 30%;
+    font-size: 2rem;
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
     border: 2px #B7760E solid;
     color: #B7760E;
-}
-
-#new-batch:hover {
-    cursor: pointer;
-    background-color: #5483D3;
-    color: white;
+    border-radius: 1em;
+    line-height: 3rem;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 #continue-batch:hover {
