--- a/styles/home.css
+++ b/styles/home.css
@@ -1,15 +1,24 @@
+/*
+------------------------------------
+    FULL PAGE
+------------------------------------
+*/
+
 html, body{
     height: 100%;
     width: 100%;
     background-color: #17243A;
 }
 
-h2 {
-    margin: 0 0 1em 0;
-}
+/*
+------------------------------------
+    WRAPS THE CONTENT
+------------------------------------
+*/
 
 .container {
-    padding: 0;
+    margin: 0;
+    padding: 10vw;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -22,6 +31,12 @@ h2 {
     display: flex;
     align-items: center;
 }
+
+/*
+------------------------------------
+    LINE SEPARATOR ON BIG SCREENS
+------------------------------------
+*/
 
 .sidebar {
     height: 60%;
@@ -41,25 +56,108 @@ h2 {
     align-items: center;
 }
 
-.input-container {
-    padding: 1em 0 1em 0;
-    position: relative;
+/*
+------------------------------------
+    CELLSWIPER TITLE
+------------------------------------
+*/
+
+h2 {
+    margin: 0 0 1em 0;
+}
+
+/*
+------------------------------------
+    TEXT FIELD STYLING
+    from: https://scotch.io/tutorials/google-material-design-input-boxes-in-css3
+------------------------------------
+*/
+
+input[type=text] {
+    display: block;
+    width: auto;
+    color: white;
+    line-height: 2rem;
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: #17243A;
+}
+
+input[type=text]:focus {
+    outline: none;
+}
+
+label.shift {
+    color: white;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: 0.2s ease all;
+}
+
+input[type=text]:focus ~ label, input[type=text]:valid ~ label {
+    top: -20px;
+    right: 100%;
+    font-size: 14px;
+    color: #B7760E;
 }
 
 .submit-form {
     margin-bottom: 1em;
 }
 
+/*
+------------------------------------
+    ANIMATED BAR
+------------------------------------
+*/
+
+.bar {
+    position: relative;
+    display: block;
+    width: 300px;
+}
+
+.bar:before, .bar:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: #B7760E;
+    transition: 0.2s ease all;
+}
+
+.bar:before {
+    left: 50%;
+}
+
+.bar:after {
+    right: 50%;
+}
+
+input[type=text]:focus ~ .bar:before, input[type=text]:focus ~ .bar:after {
+    width: 50%;
+}
+
+/*
+------------------------------------
+    BUTTON
+------------------------------------
+*/
+
 #continue-batch {
-    margin: auto;
-    width: 30%;
-    font-size: 2rem;
+    width: 40%;
+    font-size: 2vh;
+    line-height: 2vh;
     text-align: center;
     font-family: "Open Sans", sans-serif;
     border: 2px #B7760E solid;
-    color: #B7760E;
     border-radius: 1em;
-    line-height: 3rem;
+    color: #B7760E;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
@@ -71,4 +169,35 @@ h2 {
 
 #batch-wrapper {
     padding-top: 10px;
+}
+
+/*
+------------------------------------
+    MEDIA QUERIES - Tablets
+------------------------------------
+*/
+
+@media only screen and (min-width: 768px) {
+    h2 {
+        font-size: 10rem;
+    }
+    input[type=text] {
+        font-size: 3rem;
+    }
+}
+
+/*
+------------------------------------
+    MEDIA QUERIES - Desktops
+------------------------------------
+*/
+
+@media only screen and (min-width: 992px) {
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    h2 {
+        font-size: 4rem;
+    }
 }
