add percentages to batch_list styling

--- a/styles/batch_list.css
+++ b/styles/batch_list.css
@@ -20,7 +20,7 @@
 }
 
 .month {
-    margin-left: 20px;
+    margin-left: 5%;
     overflow: hidden;
 }
 
@@ -29,22 +29,22 @@
 }
 
 .year-list {
-    max-height: 200px;
+    max-height: 30%;
     overflow-y: auto;
 }
 
 .month-list {
-    max-height: 200px;
+    max-height: 10%;
     overflow-y: auto;
 }
 
 .batch {
-    margin-left: 40px;
+    margin-left: 5%;
     margin-right: 0;
     overflow: hidden;
 }
 
 .batch-path {
     color: lightgrey;
-    padding-left: 5px;
+    padding-left: 1%;
 }
