--- a/styles/export.css
+++ b/styles/export.css
@@ -1,3 +1,23 @@
+html, body {
+    background-color: #17243A;
+}
+
+.top-bar {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+h1 {
+    margin: 0;
+}
+
+.title {
+    text-align: right;
+}
+
 .panel {
     padding-left: 0;
     padding-right: 0;
@@ -6,4 +26,17 @@
 
 .panel-heading {
     transition: background-color 0.3s, color 0.3s;
+}
+
+/*
+------------------------------------
+    MEDIA QUERIES - Tablets + Bigger
+------------------------------------
+*/
+
+@media only screen and (min-width: 768px) {
+    .top-bar {
+        margin-top: 1%;
+        margin-bottom: 1%;
+    }
 }
