--- a/styles/add_directory.css
+++ b/styles/add_directory.css
@@ -31,6 +31,14 @@
 .alert-wrapper {
     margin-top: 20px;
 }
+
+#add-directory-wrapper {
+    margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+    
+}
 /*
 .collapsed .caret{
     -webkit-transform: rotate(-90deg);
